--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.5",
-    "antd-mobile": "^2.3.3",
     "babel-plugin-import": "^1.13.0",
     "customize-cra": "^1.0.0",
     "node-sass": "^4.14.1",
@@ -22,14 +21,12 @@
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "redux": "^4.0.5",
-    "redux-persist": "^6.0.0",
     "typescript": "~3.7.2"
   },
   "scripts": {
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
-    "test": "react-app-rewired test",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -46,5 +43,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "antd-mobile": "^2.3.3",
+    "redux": "^4.0.5",
+    "redux-persist": "^6.0.0"
   }
 }
